@@ -2,7 +2,7 @@ spec = Gem::Specification.new do |s|
   s.name = 'unicorn-lockdown'
   s.version = '0.13.0'
   s.platform = Gem::Platform::RUBY
-  s.summary = "Helper library for running Unicorn with (chroot|unveil)/privdrop/fork+exec/pledge on OpenBSD"
+  s.summary = "Helper library for running Unicorn with fork+exec/unveil/pledge on OpenBSD"
   s.author = "Jeremy Evans"
   s.homepage= 'https://github.com/jeremyevans/unicorn-lockdown'
   s.email = "code@jeremyevans.net"
