@@ -1,5 +1,9 @@
 = master
 
+* Remove support for chroot and starting applications as root (jeremyevans)
+
+* Remove chrooter library (jeremyevans)
+
 * Add unveiler library for testing pledged/unveiled applications, similar to chrooter but smaller (jeremyevans)
 
 * Add :master_execpledge option to Unicorn.lockdown, for initial pledge of worker processes (jeremyevans)
